syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "RouteGuideProto";

package monitor_alert_manager_grpc_pb;


service MonitorAlertManager {
  rpc Status(StatusRequest) returns (StatusReply) {}
}

message StatusRequest {}

message StatusReply {
    string msg = 1;
    string err = 2;
}
